:art: Add category selection feature for reviews